Update package versions and target frameworks
- Upgraded several package versions in `Directory.Packages.props`, including `Microsoft.Bcl.AsyncInterfaces`, `System.Collections.Immutable`, `System.IO.Pipelines`, and `System.Text.Json`. Added `Nerdbank.MessagePack`.
- Modified `nuget.config` to add a new package source for `nuget.org` and included package source mappings.
- Updated `StreamJsonRpc.csproj` to target only `net8.0`, removing `net6.0`, and added a reference to `Nerdbank.MessagePack`.
- Changed `Benchmarks.csproj` to target `net8.0` instead of `net6.0`.
- Adjusted `StreamJsonRpc.Tests.csproj` to exclusively target `net8.0`.

--- a/nuget.config
+++ b/nuget.config
@@ -5,10 +5,22 @@
   </config>
   <packageSources>
     <clear />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="msft_consumption" value="https://pkgs.dev.azure.com/azure-public/vside/_packaging/msft_consumption/nuget/v3/index.json" />
   </packageSources>
   <disabledPackageSources>
     <!-- Defend against user or machine level disabling of sources that we list in this file. -->
     <clear />
   </disabledPackageSources>
+  <packageSourceMapping>
+    <!-- key value for <packageSource> should match key values from <packageSources> element -->
+    <packageSource key="msft_consumption">
+      <package pattern="*" />
+    </packageSource>
+    <packageSource key="nuget.org">
+      <package pattern="Nerdbank.MessagePack" />
+      <package pattern="System.*" />
+      <package pattern="Microsoft.Bcl.*" />
+    </packageSource>
+  </packageSourceMapping>
 </configuration>
