Continue implementing NerdbankMessagePackFormatter.

--- a/nuget.config
+++ b/nuget.config
@@ -5,6 +5,7 @@
   </config>
   <packageSources>
     <clear />
+    <add key="PublicCI" value="https://pkgs.dev.azure.com/andrewarnott/OSS/_packaging/PublicCI/nuget/v3/index.json" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="msft_consumption" value="https://pkgs.dev.azure.com/azure-public/vside/_packaging/msft_consumption/nuget/v3/index.json" />
   </packageSources>
@@ -18,9 +19,11 @@
       <package pattern="*" />
     </packageSource>
     <packageSource key="nuget.org">
-      <package pattern="Nerdbank.MessagePack" />
       <package pattern="System.*" />
       <package pattern="Microsoft.Bcl.*" />
+    </packageSource>
+    <packageSource key="PublicCI">
+      <package pattern="Nerdbank.MessagePack" />
     </packageSource>
   </packageSourceMapping>
 </configuration>
