--- a/test/StreamJsonRpc.Tests/StreamJsonRpc.Tests.csproj
+++ b/test/StreamJsonRpc.Tests/StreamJsonRpc.Tests.csproj
@@ -11,30 +11,39 @@
     <Compile Include="..\..\src\StreamJsonRpc\SharedUtilities.cs" Link="SharedUtilities.cs" />
     <Compile Update="DisposableProxyJsonTests.cs" DependentUpon="DisposableProxyTests.cs" />
     <Compile Update="DisposableProxyMessagePackTests.cs" DependentUpon="DisposableProxyTests.cs" />
+    <Compile Update="DisposableProxyNerdbankMessagePackTests.cs" DependentUpon="DisposableProxyTests.cs" />
     <Compile Update="DisposableProxySystemTextJsonTests.cs" DependentUpon="DisposableProxyTests.cs" />
     <Compile Update="DuplexPipeMarshalingJsonTests.cs" DependentUpon="DuplexPipeMarshalingTests.cs" />
     <Compile Update="DuplexPipeMarshalingMessagePackTests.cs" DependentUpon="DuplexPipeMarshalingTests.cs" />
+    <Compile Update="DuplexPipeMarshalingNerdbankMessagePackTests.cs" DependentUpon="DuplexPipeMarshalingTests.cs" />
     <Compile Update="DuplexPipeMarshalingSystemTextJsonTests.cs" DependentUpon="DuplexPipeMarshalingTests.cs" />
     <Compile Update="ObserverMarshalingJsonTests.cs" DependentUpon="ObserverMarshalingTests.cs" />
     <Compile Update="ObserverMarshalingMessagePackTests.cs" DependentUpon="ObserverMarshalingTests.cs" />
+    <Compile Update="ObserverMarshalingNerdbankMessagePackTests.cs" DependentUpon="ObserverMarshalingTests.cs" />
     <Compile Update="ObserverMarshalingSystemTextJsonTests.cs" DependentUpon="ObserverMarshalingTests.cs" />
     <Compile Update="JsonRpcJsonHeadersTests.cs" DependentUpon="JsonRpcTests.cs" />
     <Compile Update="JsonRpcSystemTextJsonHeadersTests.cs" DependentUpon="JsonRpcTests.cs" />
     <Compile Update="JsonRpcMessagePackLengthTests.cs" DependentUpon="JsonRpcTests.cs" />
+    <Compile Update="JsonRpcNerdbankMessagePackLengthTests.cs" DependentUpon="JsonRpcTests.cs" />
     <Compile Update="AsyncEnumerableJsonTests.cs" DependentUpon="AsyncEnumerableTests.cs" />
     <Compile Update="AsyncEnumerableMessagePackTests.cs" DependentUpon="AsyncEnumerableTests.cs" />
+    <Compile Update="AsyncEnumerableNerdbankMessagePackTests.cs" DependentUpon="AsyncEnumerableTests.cs" />
     <Compile Update="AsyncEnumerableSystemTextJsonTests.cs" DependentUpon="AsyncEnumerableTests.cs" />
     <Compile Update="TargetObjectEventsJsonTests.cs" DependentUpon="TargetObjectEventsTests.cs" />
     <Compile Update="TargetObjectEventsMessagePackTests.cs" DependentUpon="TargetObjectEventsTests.cs" />
+    <Compile Update="TargetObjectEventsNerdbankMessagePackTests.cs" DependentUpon="TargetObjectEventsTests.cs" />
     <Compile Update="TargetObjectEventsSystemTextJsonTests.cs" DependentUpon="TargetObjectEventsTests.cs" />
     <Compile Update="WebSocketMessageHandlerJsonTests.cs" DependentUpon="WebSocketMessageHandlerTests.cs" />
     <Compile Update="WebSocketMessageHandlerMessagePackTests.cs" DependentUpon="WebSocketMessageHandlerTests.cs" />
+    <Compile Update="WebSocketMessageHandlerNerdbankMessagePackTests.cs" DependentUpon="WebSocketMessageHandlerTests.cs" />
     <Compile Update="WebSocketMessageHandlerSystemTextJsonTests.cs" DependentUpon="WebSocketMessageHandlerTests.cs" />
     <Compile Update="MarshalableProxyJsonTests.cs" DependentUpon="MarshalableProxyTests.cs" />
     <Compile Update="MarshalableProxyMessagePackTests.cs" DependentUpon="MarshalableProxyTests.cs" />
+    <Compile Update="MarshalableProxyNerdbankMessagePackTests.cs" DependentUpon="MarshalableProxyTests.cs" />
     <Compile Update="MarshalableProxySystemTextJsonTests.cs" DependentUpon="MarshalableProxyTests.cs" />
     <Compile Update="SystemTextJsonFormatterTests.cs" DependentUpon="FormatterTestBase.cs" />
     <Compile Update="MessagePackFormatterTests.cs" DependentUpon="FormatterTestBase.cs" />
+    <Compile Update="NerdbankMessagePackFormatterTests.cs" DependentUpon="FormatterTestBase.cs" />
     <Compile Update="JsonMessageFormatterTests.cs" DependentUpon="FormatterTestBase.cs" />
     <Compile Update="JsonRpcRemoteTargetJsonMessageFormatterTests.cs" DependentUpon="JsonRpcRemoteTargetTests.cs" />
     <Compile Update="JsonRpcRemoteTargetSystemTextJsonFormatterTests.cs" DependentUpon="JsonRpcRemoteTargetTests.cs" />
