--- a/nuget.config
+++ b/nuget.config
@@ -21,6 +21,7 @@
     <packageSource key="nuget.org">
       <package pattern="System.*" />
       <package pattern="Microsoft.Bcl.*" />
+      <package pattern="PolyType" />
     </packageSource>
     <packageSource key="PublicCI">
       <package pattern="Nerdbank.MessagePack" />
